--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
       window.location.href = `mailto:kontakt@migrationservice.de?subject=Anfrage%20über%20Website&body=${body}`;
       info.textContent = 'Ihr E‑Mail‑Programm öffnet sich. Vielen Dank!';
     });
+    Test
   </script>
 </body>
 </html>
