image 1.png added

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <section id="beratung" class="beratung" style="text-align:center; margin: 3rem 0;">
       <h2>Persönliche Beratung</h2>
       <p>Ich begleite Ihr Unternehmen Schritt für Schritt – von der Planung bis zur Umsetzung Ihrer Migration.</p>
-      <img src="Gemini_Generated_Image_ysk9yqysk9yqysk9.png" alt="Beratungsgespräch im Büro">
+      <img src="1.png" alt="Beratungsgespräch im Büro">
     </section>
 
     <section id="kontakt">
